--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@flash1/v1-client",
+  "name": "@flash1-exchange/v1-client",
   "version": "1.0.0",
   "description": "Trading client library for flash1",
   "main": "build/src/index.js",
