--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "npm test -- --watch"
   },
-  "keywords": ["flash1", "exchange", "crypto", "trading", "api"],
+  "keywords": [
+    "flash1",
+    "exchange",
+    "crypto",
+    "trading",
+    "api"
+  ],
   "homepage": "https://github.com/flash1-dev/flash1-v1-client",
   "author": "flash1 & dydx",
   "license": "Apache-2.0",
@@ -35,9 +41,11 @@
     "@types/ffi-napi": "^4.0.4",
     "@types/jest": "^27.5.0",
     "@types/uuid": "^8.3.0",
+    "@types/ws": "^8.5.3",
     "jest": "^27.5.1",
     "pretty-format": "^28.0.2",
     "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "ws": "^8.6.0"
   }
 }
