--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@flash1-exchange/v1-client",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Trading client library for flash1",
-  "main": "build/src/index.js",
-  "types": "build/src/index.d.ts",
+  "main": "./build/src/index.js",
+  "types": "./build/src/index.d.ts",
   "scripts": {
     "build": "rm -rf build/ && npm run compile",
     "compile": "tsc",
