--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "@flash1-exchange/v1-client",
   "version": "1.0.6",
   "description": "Trading client library for flash1",
-  "main": "./build/src/index.js",
-  "types": "./build/src/index.d.ts",
+  "main": "dist/bundle.js",
+  "types": "dist/src/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rm -rf build/ && npm run compile",
-    "compile": "tsc",
-    "compile:watch": "npm run compile -- --watch",
-    "coverage": "npm run test -- --coverage",
-    "fix": "npm run lint -- --fix",
-    "lint": "eslint --ext .ts,.js .",
+    "build": "rm -rf dist/ && webpack --mode production",
     "start": "node build/src/index.js",
-    "prepublishOnly": "npm run compile",
     "test": "NODE_ENV=test jest",
     "test:watch": "npm test -- --watch"
   },
@@ -34,20 +31,29 @@
     "crypto-js": "^4.1.1",
     "es6-promisify": "^6.0.1",
     "ethers": "5.4",
+    "lodash": "^4.17.21",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@dydxprotocol/node-service-base-dev": "0.2.5",
+    "@babel/preset-env": "^7.18.2",
     "@types/elliptic": "^6.4.14",
     "@types/es6-promisify": "^6.0.0",
     "@types/ffi-napi": "^4.0.4",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^27.1.4",
+    "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.0",
+    "@types/webpack-dev-server": "^4.7.2",
     "@types/ws": "^8.5.3",
+    "babel-loader": "^8.2.5",
     "jest": "^27.5.1",
     "pretty-format": "^28.0.2",
     "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.2",
     "ws": "^8.6.0"
   }
 }
