--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact"
+    ],
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
+        "source.fixAll.eslint": true,
     },
-    "eslint.validate": ["javascript", "typescript"],
-    "editor.formatOnSave": true,
-    "[markdown]": {
-        "editor.formatOnSave": false
-    }
 }
