--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
   "author": "flash1 & dydx",
   "license": "Apache-2.0",
   "dependencies": {
-    "@flash1-exchange/starkex-lib": "^1.0.7",
-    "@types/crypto-js": "^4.1.1",
+    "@flash1-exchange/starkex-eth": "^0.1.7",
+    "@flash1-exchange/starkex-lib": "^1.1.0",
     "axios": "^0.21.1",
-    "bignumber.js": "^9.0.1",
-    "bn.js": "^5.2.1",
+    "bignumber.js": "9.0.1",
+    "bn.js": "5.2.1",
     "crypto-js": "^4.1.1",
-    "es6-promisify": "^6.0.1",
     "ethers": "5.4",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.20",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.2",
+    "@types/crypto-js": "^4.1.1",
     "@types/elliptic": "^6.4.14",
     "@types/es6-promisify": "^6.0.0",
     "@types/ffi-napi": "^4.0.4",
@@ -45,14 +45,22 @@
     "@types/uuid": "^8.3.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@types/ws": "^8.5.3",
+    "assert": "^2.0.0",
     "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "jest": "^27.5.1",
+    "os-browserify": "^0.3.0",
     "pretty-format": "^28.0.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.3.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3",
+    "url": "^0.11.0",
+    "web3-core": "^1.7.5",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.2",
