--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bignumber.js": "9.0.1",
     "bn.js": "5.2.1",
     "crypto-js": "^4.1.1",
-    "ethers": "5.4",
+    "ethers": "^5.7.1",
     "lodash": "4.17.20",
     "uuid": "^8.3.1"
   },
@@ -57,7 +57,7 @@
     "stream-http": "^3.2.0",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.3.0",
-    "ts-node": "^10.8.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.3",
     "url": "^0.11.0",
     "web3-core": "^1.7.5",
