--- a/package.json
+++ b/package.json
@@ -45,13 +45,20 @@
     "@types/uuid": "^8.3.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "assert": "^2.0.0",
     "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "https-browserify": "^1.0.0",
     "jest": "^27.5.1",
     "os-browserify": "^0.3.0",
+    "prettier": "^2.6.2",
     "pretty-format": "^28.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
