--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flash1-exchange/v1-client",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "Trading client library for flash1",
   "main": "dist/bundle.js",
   "types": "dist/src/index.d.ts",
@@ -25,12 +25,12 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@flash1-exchange/starkex-eth": "^0.1.9",
-    "@flash1-exchange/starkex-lib": "^1.1.0",
+    "@flash1-exchange/starkex-lib": "^1.2.4",
     "axios": "^0.21.1",
     "bignumber.js": "9.0.1",
     "bn.js": "5.2.1",
     "crypto-js": "^4.1.1",
-    "ethers": "5.4",
+    "ethers": "^5.7.1",
     "lodash": "4.17.20",
     "uuid": "^8.3.1"
   },
@@ -45,13 +45,20 @@
     "@types/uuid": "^8.3.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "assert": "^2.0.0",
     "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "https-browserify": "^1.0.0",
     "jest": "^27.5.1",
     "os-browserify": "^0.3.0",
+    "prettier": "^2.6.2",
     "pretty-format": "^28.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
