--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flash1-exchange/v1-client",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "description": "Trading client library for flash1",
   "main": "dist/bundle.js",
   "types": "dist/src/index.d.ts",
@@ -28,12 +28,15 @@
   "dependencies": {
     "@flash1-exchange/starkex-eth": "^0.2.4",
     "@flash1-exchange/starkex-lib": "^1.2.7",
+    "@noble/secp256k1": "^1.7.1",
     "axios": "^0.21.1",
     "bignumber.js": "9.0.1",
     "bn.js": "5.2.1",
     "crypto-js": "^4.1.1",
+    "ecdsa": "^0.7.0",
     "ethers": "^5.7.1",
     "lodash": "4.17.20",
+    "universal-ecdsa": "^1.1.4",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
